Revision history for Cache

1.05 in progress
 - fixed directory paths on Windows partitions
 - NullCache uses BaseCache

1.04 2005-03-17-11-23
 - release version 1.04
 - repair permissions on temp cache files
 
1.03 2004-10-04-11-23
 - release version 1.03
 - modified the FileBackend to use the more robust File::Temp
 - "officially" recommend FileCache over SharedMemoryCache
 - added more robust error checking for shared memory caches
 - added a check for invalid frozen data
 - added $1 to all error messages

1.02 2003-04-15-10-41
 - released version 1.02
 - require Digest::SHA1 2.02, optionally IPC::ShareLite 0.09
 - use Storable's "nfreeze" instead of "freeze"
 - added notes on locking and Storable to the README
 - updated documentation on expiration units
 - modified the quoting of the untainted path regex
 - fixed the duplicated get_keys in NullCache
 - applied patch to ensure consistent state if the filesystem fills up
 - applied patch to ensure initialization of the memory cache hash

1.01 2002-04-14-01-30
 - released version 1.01
 - switched to Digest::SHA1
 - updated copyright dates

1.0 2002-04-06-18-51
 - released version 1.0
 - localized scope of global file and directory handles (FILE and DIR)
 - applied Jonathan Swartz's patch for a much better untainting regex
 - changed _Untaint_String to throw an exception on a taint
 - further improved the fix to prevent race conditions that caused the
   tests to fail
 - exposed the get_namespaces method on Cache
 - fixed the failing Win32 tests caused by fileglobs in Makefile.PL
 - applied Yves Orton's patch in _Make_Path to fix warnings on Win32

0.99 2001-12-09-18-45
 - released version 0.99
 - major refactoring of code
 - replaced non-standard usage of SUCCESS and FAILURE with Error.pm
 - replaced non-standard usage of TRUE and FALSE with 1 and 0 
 - migrated from the term "identifier" to the more standard term "key"
   and marked the old public methods with identifier as deprecated