@@ -1,3 +1,6 @@
+- dwright at cpan.org for the fix on the infinite look for
+  auto_purge_on_get
+
 - thanks to <info at whawes.co.uk> for catching the windows directory
   path bug
 
